--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "collection-blog",
+  "name": "fatcat-project-analysis",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,9 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "ant-design-vue": "3",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
     "core-js": "^3.8.3",
+    "marked": "^16.1.2",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.17",
     "vue": "^3.2.13",
