--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fatcat-project-analysis",
+  "name": "github-project-collection",
   "version": "0.1.0",
   "private": true,
   "scripts": {
